
- intl:
  . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
    of destination). (andrewnester)

- OCI8:
  . Fixed valgrind issue. (Tianfang Yang)

- Opcache:
  . Fixed bug #75373 (Warning Internal error: wrong size calculation). (Laruence, Dmitry)

- OpenSSL:
  . Fixed bug #75363 (openssl_x509_parse leaks memory). (Bob, Jakub Zelenka)

- PGSQL:
  . Fixed bug #75419 (Default link incorrectly cleared/linked by pg_close()). (Sara)

- Zlib:
  . Fixed bug #75299 (Wrong reflection on inflate_init and inflate_add). (Fabien
    Villepinte)

26 Oct 2017 PHP 7.0.25

- Core:
  . Fixed bug #75241 (Null pointer dereference in zend_mm_alloc_small()).
    (Laruence)
  . Fixed bug #75236 (infinite loop when printing an error-message). (Andrea)
  . Fixed bug #75252 (Incorrect token formatting on two parse errors in one
    request). (Nikita)
  . Fixed bug #75220 (Segfault when calling is_callable on parent). 
    (andrewnester)
  . Fixed bug #75290 (debug info of Closures of internal functions contain
    garbage argument names). (Andrea)

- Apache2Handler:
  . Fixed bug #75311 (error: 'zend_hash_key' has no member named 'arKey' in
    apache2handler). (mcarbonneaux)

- Date:
  . Fixed bug #75055 (Out-Of-Bounds Read in timelib_meridian()). (Derick)

- Intl:
  . Fixed bug #75318 (The parameter of UConverter::getAliases() is not
    optional). (cmb)

- mcrypt:
  . Fixed bug #72535 (arcfour encryption stream filter crashes php). (Leigh)

- OCI8:
  . Fixed incorrect reference counting. (Dmitry, Tianfang Yang)

- PCRE:
  . Fixed bug #75207 (applied upstream patch for CVE-2016-1283). (Anatol)

- litespeed:
  . Fixed bug #75248 (Binary directory doesn't get created when building 
    only litespeed SAPI). (petk)
  . Fixed bug #75251 (Missing program prefix and suffix). (petk)

- SPL:
  . Fixed bug #73629 (SplDoublyLinkedList::setIteratorMode masks intern flags).
    (J. Jeising, cmb)

28 Sep 2017 PHP 7.0.24

- Core: